# arklib-android

./: .gitignore  README.md  Readme.md  build.gradle  ra.sh  settings.gradle  sonar-project.properties
.github/workflows/: build.yml  release.yml  sonar_analysis.yml  sonarcloud.yml
appmock/: build.gradle
appmock/src/androidTest/java/space/taran/arknavigator/: LinkTest.kt  PDFGenTest.kt  ResourceIdTest.kt  ResourcesIndexTest.kt
appmock/src/main/: AndroidManifest.xml
appmock/src/main/java/space/taran/arklib/: Lib.kt
appmock/src/main/java/space/taran/arknavigator/: MainActivity.kt
arklib/: Cargo.toml  README.md
arklib/src/: errors.rs  index.rs  interop.rs  lib.rs  signature.rs  utils.rs
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/androidTest/java/space/taran/arklib/: TestingUtils.kt
lib/src/main/: AndroidManifest.xml
lib/src/main/java/dev/arkbuilders/arklib/: ArkFiles.kt  Lib.kt
lib/src/main/java/space/taran/arklib/: ArkFiles.kt  Lib.kt
lib/src/main/res/values/: strings.xml
lib/src/test/java/space/taran/arklib/: ResourceIdTest.kt  TestingUtils.kt
sample/: build.gradle
sample/src/androidTest/java/dev/arkbuilders/sample/: ResourceIdTest.kt
sample/src/androidTest/java/space/taran/sample/: GrantPermissionExtension.kt  LinkTest.kt  PDFBenchmark.kt  PDFGenTest.kt  ResourceIdTest.kt
sample/src/main/: AndroidManifest.xml
sample/src/main/java/space/taran/sample/: MainActivity.kt
sample/src/main/res/values/: strings.xml
sample/src/test/java/dev/arkbuilders/sample/: ExampleUnitTest.kt
sample/src/test/java/space/taran/sample/: ExampleUnitTest.kt
scorewidget/: build.gradle.kts
scorewidget/src/androidTest/java/dev/arkbuilders/scorewidget/: ExampleInstrumentedTest.kt
scorewidget/src/main/res/layout/: score_widget.xml
scorewidget/src/main/res/values/: colors.xml
scripts/: buildRustLibForHost.sh
(+277 files in other folders)
