[package]
name = "arklib-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "arklib"
crate-type = ["cdylib", "staticlib"]

[dependencies]
arklib = { git = "https://github.com/ARK-builders/arklib", rev = "0d25eb0" }
anyhow = "1.0.58"
env_logger = "0.9.0"
canonical-path = "2.0.2"
url = { version = "2.2.2", features = ["serde"] }
openssl = { version = "0.10.42", features = ["vendored"] }
image = "0.24.2"
log = "0.4.14"
jni = { version = "0.19.0", default-features = false }
android_logger = "0.11.0"

[target.'cfg(target_os="android")'.dependencies]
ndk = "0.6.0"
